# web-clipper

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
raycast/: clip-to-markdown.sh  test-hello.sh
src/web_clipper/: __init__.py  browser.py  cli.py  clipper.py  config.py  html_processor.py  images.py  storage.py
tests/: test_config.py  test_storage.py
